--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas nesciunt soluta nulla cupiditate saepe, quod, eius illo mollitia magni ducimus possimus voluptatem provident quam at iure ut modi voluptatibus omnis sint dicta doloremque commodi! Expedita eligendi excepturi dolor, quaerat quae soluta doloribus similique autem voluptate ad. Unde autem facilis consectetur.</p></div>
